tests/test_files_pa3/new/SemanticErrors/badIf2.ic
class A
{
	
	static void main(string[] args) { }

	void badIf()
	{
		int x;
		x = 4;
		
		boolean b;
		
		if(b || x){
		 int y = 9;
		}			
		return;
	}
	
}